Cadastro de moradores

--- a/GestãoCondomínio/Views/Morador/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Morador/Cadastrar.cshtml
@@ -1,36 +1,40 @@
-﻿@{
+﻿@model MoradorModel
+
+@{
     ViewData["Title"] = "Cadastrar morador";
 }
+
 <div class="text-center">
    
     <h1 class="display-4">Cadastrar morador</h1>
 
 </div>
 
-<form>
+<form asp-controller="Morador" asp-action="Cadastrar" method="post">
+
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do morador">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do morador">
     </div>
     <div class="form-group">
         <label for="Rg">RG</label>
-        <input type="text" class="form-control" placeholder="Digite o RG do morador">
+        <input type="text" asp-for="RG" class="form-control" placeholder="Digite o RG do morador">
     </div>
     <div class="form-group">
         <label for="cpf">CPF</label>
-        <input type="text" class="form-control" placeholder="Digite o CPF do morador">
+        <input type="text" asp-for="CPF" class="form-control" placeholder="Digite o CPF do morador">
     </div>
     <div class="form-group">
         <label for="telefone">Telefone</label>
-        <input type="text" class="form-control" placeholder="Digite o telefone do morador">
+        <input type="text" asp-for="Telefone" class="form-control" placeholder="Digite o telefone do morador">
     </div>
     <div class="form-group">
         <label for="email">E-mail</label>
-        <input type="email" class="form-control" placeholder="Digite o e-mail do morador">
+        <input type="email" asp-for="Email" class="form-control" placeholder="Digite o e-mail do morador">
     </div>
     <div class="form-group">
         <label for="apartamento">Apartamento</label>
-        <input type="text" class="form-control" placeholder="Digite o apartamento do morador">
+        <input type="text" asp-for="Apartamento" class="form-control" placeholder="Digite o apartamento do morador">
     </div>
 
 
