--- a/GestãoCondomínio/Views/Morador/Apagar.cshtml
+++ b/GestãoCondomínio/Views/Morador/Apagar.cshtml
@@ -1,11 +1,12 @@
-﻿@{
+﻿@model MoradorModel
+@{
     ViewData["Title"] = "Apagar morador";
 }
 
 <div class="text-center">
-    <h3>Realmente deseja apagar o morador?</h3>
+    <h3>Realmente deseja apagar o morador (@Model.Nome)?</h3>
 
 </div>
 
 <a class="btn btn-primary" role="button"asp-controller="Morador" asp-action="Index">Cancelar exclusão</a>
-<a class="btn btn-danger"asp-controller="Morador" asp-action="Deletar">Confirmar exclusão</a>
+<a class="btn btn-danger"asp-controller="Morador" asp-action="Deletar" asp-route-id="@Model.Id" role="button">Confirmar exclusão</a>
