--- a/GestãoCondomínio/Views/Morador/Editar.cshtml
+++ b/GestãoCondomínio/Views/Morador/Editar.cshtml
@@ -13,26 +13,32 @@
     <div class="form-group">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do morador">
+        @Html.ValidationMessageFor(x => x.Nome)
     </div>
     <div class="form-group">
         <label for="Rg">RG</label>
         <input type="text" asp-for="RG" class="form-control" placeholder="Digite o RG do morador">
+        @Html.ValidationMessageFor(x => x.RG)
     </div>
     <div class="form-group">
         <label for="cpf">CPF</label>
         <input type="text" asp-for="CPF" class="form-control" placeholder="Digite o CPF do morador">
+        @Html.ValidationMessageFor(x => x.CPF)
     </div>
     <div class="form-group">
         <label for="telefone">Telefone</label>
         <input type="text" asp-for="Telefone" class="form-control" placeholder="Digite o telefone do morador">
+        @Html.ValidationMessageFor(x => x.Telefone)
     </div>
     <div class="form-group">
         <label for="email">E-mail</label>
         <input type="email" asp-for="Email" class="form-control" placeholder="Digite o e-mail do morador">
+        @Html.ValidationMessageFor(x => x.Email)
     </div>
     <div class="form-group">
         <label for="apartamento">Apartamento</label>
         <input type="text" asp-for="Apartamento" class="form-control" placeholder="Digite o apartamento do morador">
+        @Html.ValidationMessageFor(x => x.Apartamento)
     </div>
 
     <button type="submit" class="btn btn-primary">Editar</button>
