--- a/GestãoCondomínio/Views/Morador/Index.cshtml
+++ b/GestãoCondomínio/Views/Morador/Index.cshtml
@@ -3,10 +3,28 @@
     ViewData["Title"] = "Listagem de moradores";
 }
 <div class="text-center">
-    <div class="d-grid  gap-2 d-md-flex justify-content-md-start" >
-        <a class="btn btn-primary"role="button" asp-controller="Morador" asp-action="Cadastrar">Novo Morador</a>
+    <div class="d-grid  gap-2 d-md-flex justify-content-md-start">
+        <a class="btn btn-primary" role="button" asp-controller="Morador" asp-action="Cadastrar">Novo Morador</a>
     </div>
     <br />
+    @if (TempData["MensagemSucesso"] != null)
+    {
+        <div class="alert alert-success" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" arial-label="Fechar ">X</button>
+            @TempData["MensagemSucesso"]
+        </div>
+    }
+
+    @if (TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" arial-label="Fechar ">X</button>
+            @TempData["MensagemErro"]
+        </div>
+    }
+
+    <br />
+
     <h1 class="display-4">Listagem de moradores</h1>
 
     <table class="table">
@@ -29,7 +47,7 @@
                 {
                     <tr>
                         <th scope="row">@morador.Id</th>
-                        <td>@morador.Id</td>
+                        <td>@morador.Nome</td>
                         <td>@morador.RG</td>
                         <td>@morador.CPF</td>
                         <td>@morador.Telefone</td>
@@ -37,8 +55,8 @@
                         <td>@morador.Apartamento</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a role="button" class="btn btn-primary"asp-route-id="@morador.Id" asp-controller="Morador" asp-action="Editar">Editar</a>
-                                <a role="button" class="btn btn-danger"  asp-route-id="@morador.Id" asp-controller="Morador" asp-action="Apagar">Deletar</a>
+                                <a role="button" class="btn btn-primary" asp-route-id="@morador.Id" asp-controller="Morador" asp-action="Editar">Editar</a>
+                                <a role="button" class="btn btn-danger" asp-route-id="@morador.Id" asp-controller="Morador" asp-action="Apagar">Deletar</a>
                             </div>
                         </td>
                     </tr>
