Inicio criação filtro busca e paginação

--- a/GestãoCondomínio/Views/Morador/Index.cshtml
+++ b/GestãoCondomínio/Views/Morador/Index.cshtml
@@ -27,7 +27,7 @@
 
     <h1 class="display-4">Listagem de moradores</h1>
 
-    <table class="table">
+    <table class="table" id="table-moradores">
         <thead>
             <tr>
                 <th scope="col">Id</th>
