Alinhando texto footer para o centro da página

--- a/GestãoCondomínio/Views/Shared/_Layout.cshtml
+++ b/GestãoCondomínio/Views/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="border-top footer text-muted " >
+        <div class="container text-center">
             &copy; 2022 - Gestão para Condomínio
         </div>
     </footer>
