--- a/GestãoCondomínio/wwwroot/css/site.css
+++ b/GestãoCondomínio/wwwroot/css/site.css
@@ -76,9 +76,9 @@ body {
 
 .close-alert {
     position: absolute;
-    rigth: -10px;
+    right: -10px;
     top: -15px;
-    border-radius:15px;
+    border-radius: 15px;
     width: 30px;
     height: 31px;
 }
