--- a/GestãoCondomínio/Views/Usuario/Index.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Index.cshtml
@@ -33,6 +33,7 @@
                 <th scope="col">Id</th>
                 <th scope="col">Nome</th>
                 <th scope="col">Email</th>
+                <th scope="col">Perfil</th>
                 <th scope="col">Data de Cadastro</th>
                 <th scope="col"> </th>
             </tr>
@@ -46,6 +47,7 @@
                         <th scope="row">@usuario.Id</th>
                         <td>@usuario.Nome</td>
                         <td>@usuario.Email</td>
+                        <td>@(usuario.Perfil == GestãoCondomínio.Enums.PerfilEnum.Admin?"Admin" : "Funcionário")</td>
                         <td>@usuario.DataCadastro</td>
                         <td>
                             <div class="btn-group" role="group">
