--- a/GestãoCondomínio/Views/Usuario/Index.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Index.cshtml
@@ -47,7 +47,7 @@
                         <th scope="row">@usuario.Id</th>
                         <td>@usuario.Nome</td>
                         <td>@usuario.Email</td>
-                        <td>@(usuario.Perfil == GestãoCondomínio.Enums.PerfilEnum.Admin?"Admin" : "Funcionário")</td>
+                        <td>@(usuario.Perfil == GestãoCondomínio.Enums.PerfilEnum.Admin?"Administrador" : "Funcionário")</td>
                         <td>@usuario.DataCadastro</td>
                         <td>
                             <div class="btn-group" role="group">
