--- a/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
+++ b/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
@@ -17,6 +17,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                </div>
+            </nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
