--- a/GestãoCondomínio/Views/Shared/_Layout.cshtml
+++ b/GestãoCondomínio/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 
     <footer class="border-top footer text-muted text text-center">
         <div class="container">
-            &copy; 2021 - Controle de Contatos
+            &copy; 2022 - Sistema de Gestão para Condomínio
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
