--- a/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
+++ b/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
@@ -28,7 +28,7 @@
 
     <footer class="border-top footer text-muted " >
         <div class="container text-center">
-            &copy; 2022 - Gestão para Condomínio
+            &copy; 2022 - Sistema de Gestão para Condomínio
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
