--- a/GestãoCondomínio/Views/Login/Index.cshtml
+++ b/GestãoCondomínio/Views/Login/Index.cshtml
@@ -12,7 +12,7 @@
     </div>
 }
 
-<form asp-controller="Login" asp-action="Entrar" method="post">
+<form asp-controller="Login" asp-action="Entrar" method="post" class="card">
     <div class="mb-3">
         <label for="login" class="form-label">Login</label>
         <input type="text" asp-for="Login" class="form-control" id="login">
@@ -24,5 +24,5 @@
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
 
-    <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+    <button type="submit" class="btn btn-primary ">Entrar</button>
 </form>
