--- a/GestãoCondomínio/Views/Shared/_Layout.cshtml
+++ b/GestãoCondomínio/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuários</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Funcionario" asp-action="">Funcionários</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
                         </li>
 
