--- a/GestãoCondomínio/Views/Login/Index.cshtml
+++ b/GestãoCondomínio/Views/Login/Index.cshtml
@@ -12,8 +12,8 @@
     </div>
 }
 
-<form asp-controller="Login" asp-action="Entrar" method="post" class="card">
-    <div class="mb-3">
+<form asp-controller="Login" asp-action="Entrar" method="post">
+    <div class="form-outline mb-4">
         <label for="login" class="form-label">Login</label>
         <input type="text" asp-for="Login" class="form-control" id="login">
         @Html.ValidationMessageFor(x => x.Login)
@@ -24,5 +24,5 @@
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
 
-    <button type="submit" class="btn btn-primary ">Entrar</button>
+    <button type="submit" class="btn btn-primary btn-block mb-4">Entrar</button>
 </form>
