--- a/GestãoCondomínio/Views/Login/Index.cshtml
+++ b/GestãoCondomínio/Views/Login/Index.cshtml
@@ -18,7 +18,7 @@
         <input type="text" asp-for="Login" class="form-control" id="login">
         @Html.ValidationMessageFor(x => x.Login)
     </div>
-    <div class="mb-3">
+    <div class="form-outline mb-4">
         <label for="senha" class="form-label">Senha</label>
         <input type="password" asp-for="Senha" class="form-control" id="senha">
         @Html.ValidationMessageFor(x => x.Senha)
