--- a/GestãoCondomínio/Views/Funcionario/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Cadastrar.cshtml
@@ -23,7 +23,7 @@
         @Html.ValidationMessageFor(x => x.RG)
     </div>
     <div class="form-group">
-        <label for="cpf">CPF</label>
+        <label for="funcao">Função</label>
         <input type="text" asp-for="Funcao" class="form-control" placeholder="Digite a Função do funcionário">
         @Html.ValidationMessageFor(x => x.Funcao)
     </div>
@@ -33,8 +33,8 @@
         @Html.ValidationMessageFor(x => x.Telefone)
     </div>
     <div class="form-group">
-        <label for="email">Descrição</label>
-        <input type="email" asp-for="Descricao" class="form-control" placeholder="Digite o turno de trabalho">
+        <label for="descricao">Descrição</label>
+        <input type="text" asp-for="Descricao" class="form-control" placeholder="Digite o turno de trabalho">
         @Html.ValidationMessageFor(x=>x.Descricao)
     </div>
    
