Alteração 2 View Cadastrar.cshtml

--- a/GestãoCondomínio/Views/Funcionario/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Cadastrar.cshtml
@@ -10,7 +10,7 @@
 
 </div>
 
-<form asp-controller="Morador" asp-action="Cadastrar" method="post">
+<form asp-controller="Funcionario" asp-action="Cadastrar" method="post">
 
     <div class="form-group">
         <label for="nome">Nome</label>
