--- a/GestãoCondomínio/Views/Funcionario/Index.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Index.cshtml
@@ -27,7 +27,7 @@
 
     <h1 class="display-4">Listagem de funcionários</h1>
 
-    <table class="table" id="table-funcionarios">
+    <table class="table" id="table-funcionario">
         <thead>
             <tr>
                 <th scope="col">Id</th>
