Alteração tabela funcionario

--- a/GestãoCondomínio/Views/Funcionario/Index.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Index.cshtml
@@ -48,6 +48,7 @@
                         <th scope="row">@funcionario.Id</th>
                         <td>@funcionario.Nome</td>
                         <td>@funcionario.RG</td>
+                        <td>@funcionario.Funcao</td>
                         <td>@funcionario.Telefone</td>
                         <td>@funcionario.Descricao</td>
                         <td>
