--- a/GestãoCondomínio/Views/Funcionario/Index.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="text-center">
     <div class="d-grid  gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-primary" role="button" asp-controller="Funcionario" asp-action="Cadastrar">Novo Funcionário</a>
+        <a class="btn btn-primary" role="button" asp-controller="Funcionario" asp-action="Cadastrar"> <i class="fa fa-plus-circle"></i> Novo Funcionário</a>
     </div>
     <br />
     @if (TempData["MensagemSucesso"] != null)
@@ -53,8 +53,8 @@
                         <td>@funcionario.Descricao</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a role="button" class="btn btn-primary" asp-route-id="@funcionario.Id" asp-controller="Funcionario" asp-action="Editar">Editar</a>
-                                <a role="button" class="btn btn-danger" asp-route-id="@funcionario.Id" asp-controller="Funcionario" asp-action="Apagar">Deletar</a>
+                                <a role="button" class="btn btn-primary" asp-route-id="@funcionario.Id" asp-controller="Funcionario" asp-action="Editar"><i class="fa fa-edit"></i></a>
+                                <a role="button" class="btn btn-danger" asp-route-id="@funcionario.Id" asp-controller="Funcionario" asp-action="Apagar"><i class="fa fa-trash"></i></a>
                             </div>
                         </td>
                     </tr>
