--- a/GestãoCondomínio/Views/Login/Index.cshtml
+++ b/GestãoCondomínio/Views/Login/Index.cshtml
@@ -12,7 +12,7 @@
     </div>
 }
 
-<form asp-controller="Login" asp-action="Entrar" method="post">
+@*<form asp-controller="Login" asp-action="Entrar" method="post">
     <div class="form-outline mb-4">
         <label for="login" class="form-label">Login</label>
         <input type="text" asp-for="Login" class="form-control" id="login">
@@ -25,4 +25,36 @@
     </div>
 
     <button type="submit" class="btn btn-primary btn-block mb-4">Entrar</button>
-</form>
+</form>*@
+
+
+<div class="box-parent-login">
+    <div class="well bg-white box-login">
+        <h1 class="ls-login-logo">login</h1>
+        <form role="form" asp-controller="Login" asp-action="Entrar" method="post">
+            <fieldset>
+
+                <div class="form-group ls-login-user">
+                    <label for="userLogin">Usuário</label>
+                    <input asp-for="Login" class="form-control ls-login-bg-user input-lg" id="login" type="text">
+                    @Html.ValidationMessageFor(x => x.Login)
+                </div>
+
+                <div class="form-group ls-login-password">
+                    <label for="senha">Senha</label>
+                    <input asp-for="Senha" class="form-control ls-login-bg-password input-lg" id="senha" type="password">
+                    @Html.ValidationMessageFor(x => x.Senha)
+                </div>
+
+                <a href="#" class="ls-login-forgot">Esqueci minha senha</a>
+
+                <input type="submit" value="Entrar" class="btn btn-primary btn-lg btn-block">
+                <p class="txt-center ls-login-signup">
+                    Não possui um usuário ?
+                    <a href="#">Cadastre-se agora</a>
+                </p>
+
+            </fieldset>
+        </form>
+    </div>
+</div>
