--- a/GestãoCondomínio/Views/Shared/_Layout.cshtml
+++ b/GestãoCondomínio/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
                     </ul>
                 </div>*@
-                @await Component.InvokeAsync("Menu");
+                @await Component.InvokeAsync("Menu")
             </div>
         </nav>
     </header>
