--- a/GestãoCondomínio/Views/Veiculo/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Veiculo/Cadastrar.cshtml
@@ -33,7 +33,7 @@
         @Html.ValidationMessageFor(x => x.Cor)
     </div>
     <div class="form-group">
-        <label for="email">E-mail</label>
+        <label for="tipo">Tipo</label>
         <input type="text" asp-for="Tipo" class="form-control" placeholder="Digite o tipo do veículo">
         @Html.ValidationMessageFor(x=>x.Tipo)
     </div>
