--- a/GestãoCondomínio/Views/Veiculo/Editar.cshtml
+++ b/GestãoCondomínio/Views/Veiculo/Editar.cshtml
@@ -31,9 +31,17 @@
         @Html.ValidationMessageFor(x => x.Cor)
     </div>
     <div class="form-group">
-        <label for="Tipo">Tipo</label>
-        <input type="Tipo" asp-for="Tipo" class="form-control" placeholder="Digite o tipo do veículo">
-        @Html.ValidationMessageFor(x => x.Tipo)
+        @*<label for="Tipo">Tipo</label>*@
+        <select>
+            <option value="0"> Tipo </option>
+            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Carro</option>
+            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Moto</option>
+            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Caminhão</option>
+            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Bicicleta</option>
+
+        </select>
+        @*<input type="Tipo" asp-for="Tipo" class="form-control" placeholder="Digite o tipo do veículo">
+        @Html.ValidationMessageFor(x => x.Tipo)*@
     </div>
 
     <button type="submit" class="btn btn-primary">Editar</button>
