--- a/GestãoCondomínio/Views/Veiculo/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Veiculo/Cadastrar.cshtml
@@ -34,16 +34,8 @@
     </div>
     <div class="form-group">
         <label for="tipo">Tipo</label>
-        @*<input type="text" asp-for="Tipo" class="form-control" placeholder="Digite o tipo do veículo">
-        @Html.ValidationMessageFor(x => x.Tipo)*@
-
-        <select class="form-control">
-            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Carro</option>
-            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Moto</option>
-            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Caminhão</option>
-            <option value="@Html.ValidationMessageFor(x=>x.Tipo)">Bicicleta</option>
-
-        </select>
+        <input type="text" asp-for="Tipo" class="form-control" placeholder="Digite o tipo do veículo">
+        @Html.ValidationMessageFor(x => x.Tipo)
     </div>
    
     <button type="submit" class="btn btn-primary">Salvar</button>
