Alteração form login

--- a/GestãoCondomínio/Views/Login/Index.cshtml
+++ b/GestãoCondomínio/Views/Login/Index.cshtml
@@ -12,37 +12,20 @@
     </div>
 }
 
-@*<form asp-controller="Login" asp-action="Entrar" method="post">
-    <div class="form-outline mb-4">
-        <label for="login" class="form-label">Login</label>
-        <input type="text" asp-for="Login" class="form-control" id="login">
-        @Html.ValidationMessageFor(x => x.Login)
-    </div>
-    <div class="form-outline mb-4">
-        <label for="senha" class="form-label">Senha</label>
-        <input type="password" asp-for="Senha" class="form-control" id="senha">
-        @Html.ValidationMessageFor(x => x.Senha)
-    </div>
-
-    <button type="submit" class="btn btn-primary btn-block mb-4">Entrar</button>
-</form>*@
-
-
-<div class="box-parent-login">
-    <div class="well bg-white box-login">
-        <h1 class="ls-login-logo">login</h1>
+<div class="container">
+    <div class="row justify-content-center">
         <form role="form" asp-controller="Login" asp-action="Entrar" method="post">
+            <h1 class="ls-login-logo">login</h1>
             <fieldset>
-
                 <div class="form-group ls-login-user">
                     <label for="userLogin">Usuário</label>
-                    <input asp-for="Login" class="form-control ls-login-bg-user input-lg" id="login" type="text">
+                    <input asp-for="Login" class="form-control" id="login" type="text">
                     @Html.ValidationMessageFor(x => x.Login)
                 </div>
 
                 <div class="form-group ls-login-password">
                     <label for="senha">Senha</label>
-                    <input asp-for="Senha" class="form-control ls-login-bg-password input-lg" id="senha" type="password">
+                    <input asp-for="Senha" class="form-control " id="senha" type="password">
                     @Html.ValidationMessageFor(x => x.Senha)
                 </div>
 
