--- a/GestãoCondomínio/Views/Login/Index.cshtml
+++ b/GestãoCondomínio/Views/Login/Index.cshtml
@@ -14,18 +14,19 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <form role="form" asp-controller="Login" asp-action="Entrar" method="post">
-            <h1 class="ls-login-logo">login</h1>
+        <form role="form" asp-controller="Login" asp-action="Entrar" method="post" class="Form-Container">
+            <h2 class="text-center">login</h2>
+            <br />
             <fieldset>
                 <div class="form-group ls-login-user">
-                    <label for="userLogin">Usuário</label>
-                    <input asp-for="Login" class="form-control" id="login" type="text">
+                    @*<label for="userLogin">Usuário</label>*@
+                    <input asp-for="Login" class="form-control" id="login" type="text" placeholder="Usuário">
                     @Html.ValidationMessageFor(x => x.Login)
                 </div>
 
                 <div class="form-group ls-login-password">
-                    <label for="senha">Senha</label>
-                    <input asp-for="Senha" class="form-control " id="senha" type="password">
+                    @*<label for="senha">Senha</label>*@
+                    <input asp-for="Senha" class="form-control " id="senha" type="password" placeholder="Senha">
                     @Html.ValidationMessageFor(x => x.Senha)
                 </div>
 
