--- a/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
+++ b/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Gestão para Condomínio</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/FormLogin.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.11.4/datatables.min.css" />
 </head>
 <body>
