--- a/GestãoCondomínio/wwwroot/css/site.css
+++ b/GestãoCondomínio/wwwroot/css/site.css
@@ -82,3 +82,10 @@ body {
     width: 30px;
     height: 31px;
 }
+
+.Form-Container {
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0px 0px 10px 0px;
+    background-color:aqua;
+}
