--- a/GestãoCondomínio/Views/Funcionario/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Cadastrar.cshtml
@@ -12,32 +12,32 @@
 
 <form asp-controller="Funcionario" asp-action="Cadastrar" method="post">
 
-    <div class="form-group">
+    <div class="Form-Container">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do funcionário">
         @Html.ValidationMessageFor(x => x.Nome)
-    </div>
-    <div class="form-group">
+ 
+   
         <label for="Rg">RG</label>
         <input type="text" asp-for="RG" class="form-control" placeholder="Digite o RG do funcionário">
         @Html.ValidationMessageFor(x => x.RG)
-    </div>
-    <div class="form-group">
+    
+
         <label for="funcao">Função</label>
         <input type="text" asp-for="Funcao" class="form-control" placeholder="Digite a Função do funcionário">
         @Html.ValidationMessageFor(x => x.Funcao)
-    </div>
-    <div class="form-group">
+   
+    
         <label for="telefone">Telefone</label>
         <input type="text" asp-for="Telefone" class="form-control" placeholder="Digite o telefone do funcionário">
         @Html.ValidationMessageFor(x => x.Telefone)
-    </div>
+    
 
-    <div class="form-group">
         <label for="descricao">Descrição</label>
         <input type="text" asp-for="Descricao" class="form-control" placeholder="Digite o turno de trabalho">
         @Html.ValidationMessageFor(x=>x.Descricao)
     </div>
+    <br />
    
     <button type="submit" class="btn btn-primary">Salvar</button>
     <a class="btn btn-secondary" asp-controller="Funcionario" asp-action="Index" role="button">Voltar</a>
