--- a/GestãoCondomínio/Views/Usuario/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Cadastrar.cshtml
@@ -13,17 +13,16 @@
 
 <form asp-controller="Usuario" asp-action="Cadastrar" method="post">
 
-    <div class="form-group">
+    <div class="Form-Container">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do usuário">
         @Html.ValidationMessageFor(x => x.Nome)
-    </div>
-    <div class="form-group">
+   
+    
         <label for="nome">E-mail</label>
         <input type="text" asp-for="Email" class="form-control" placeholder="Digite o e-mail do usuário">
         @Html.ValidationMessageFor(x => x.Email)
-    </div>
-    <div class="form-group">
+    
         <label for="nome">Perfil</label>
         <select asp-for="Perfil" class="form-control">
             <option value="">Selecione</option>
@@ -31,16 +30,12 @@
             <option value="@PerfilEnum.Funcionario">Funcionário</option>
         </select>
         @Html.ValidationMessageFor(x => x.Perfil)
-    </div>
-    <div class="form-group">
+   
         <label for="nome" class="form-label">Senha</label>
         <input type="password" asp-for="Senha" class="form-control" placeholder="Digite a senha do usuário">
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
-
-
-
-
+    <br />
 
     <button type="submit" class="btn btn-primary">Salvar</button>
     <a class="btn btn-secondary" asp-controller="Usuario" asp-action="Index" role="button">Voltar</a>
