--- a/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
+++ b/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UsuarioModel
 
-<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Olá, @Model.Nome</a>
+
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,12 +8,13 @@
 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
     <ul class="navbar-nav flex-grow-1">
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Página Inicial</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
         </li>
 
         @if (Model.Perfil == GestãoCondomínio.Enums.PerfilEnum.Admin)
-        {   <li class="nav-item">
-                 <a class="nav-link text-dark" asp-area="" asp-controller="Morador" asp-action="Index">Moradores</a>
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Morador" asp-action="Index">Moradores</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuários</a>
@@ -23,13 +24,19 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Funcionario" asp-action="">Funcionários</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Prestador" asp-action="">Prestadores</a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Veiculo" asp-action="">Veículos</a>
             </li>
 
         }
+
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
         </li>
+        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> @Model.Perfil</a>
 
     </ul>
 
