--- a/GestãoCondomínio/Views/Prestador/Editar.cshtml
+++ b/GestãoCondomínio/Views/Prestador/Editar.cshtml
@@ -10,27 +10,26 @@
 
 <form asp-controller="Prestador" asp-action="Editar">
     <input  type="hidden" asp-for="Id"/>
-    <div class="form-group">
+    <div class="Form-Container">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome ">
         @Html.ValidationMessageFor(x => x.Nome)
-    </div>
-    <div class="form-group">
+    
+    
         <label for="Rg">RG</label>
         <input type="text" asp-for="RG" class="form-control" placeholder="Digite o RG ">
         @Html.ValidationMessageFor(x => x.RG)
-    </div>
-    <div class="form-group">
+    
+    
         <label for="cpf">CPF</label>
         <input type="text" asp-for="CPF" class="form-control" placeholder="Digite o CPF">
         @Html.ValidationMessageFor(x => x.CPF)
-    </div>
-    <div class="form-group">
+    
+    
         <label for="contato">Contato</label>
         <input type="text" asp-for="Contato" class="form-control" placeholder="Digite o telefone do prestador">
         @Html.ValidationMessageFor(x => x.Contato)
-    </div>
-    <div class="form-group">
+    
         <label for="empresa">Empresa</label>
         <input type="text" asp-for="Empresa" class="form-control" placeholder="Digite o nome da empresa">
         @Html.ValidationMessageFor(x => x.Empresa)
