--- a/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
+++ b/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
@@ -17,6 +17,9 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Morador" asp-action="Index">Moradores</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Visitante" asp-action="Index">Visitantes</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuários</a>
             </li>
 
