--- a/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
+++ b/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
@@ -1,6 +1,5 @@
 ﻿@model UsuarioModel
 
-
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -39,8 +38,10 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
         </li>
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> @Model.Perfil</a>
+        @*<li class="nav-item">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><h5> @Model.Nome </h5> </a>
+        </li>*@
 
     </ul>
 
-    </div>
+</div>
