Alteração index Visitante

--- a/GestãoCondomínio/Views/Visitante/Index.cshtml
+++ b/GestãoCondomínio/Views/Visitante/Index.cshtml
@@ -25,17 +25,16 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de Veículos</h1>
+    <h1 class="display-4">Listagem de Visitantes</h1>
 
-    <table class="table" id="table-veiculos">
+    <table class="table" id="table-visitantes">
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Placa</th>
-                <th scope="col">Marca</th>
-                <th scope="col">Modelo</th>
-                <th scope="col">Cor</th>
-                <th scope="col">Tipo</th>
+                <th scope="col">Nome</th>
+                <th scope="col">RG</th>
+                <th scope="col">CPF</th>
+                <th scope="col">Contato</th>
                 <th scope="col"> </th>
             </tr>
         </thead>
@@ -61,7 +60,7 @@
             }
             else
             {
-                <tr class="odd"><td valign="top" colspan="5"> Nenhum veículo encontrado</td></tr>
+                <tr class="odd"><td valign="top" colspan="5"> Nenhum visitante encontrado</td></tr>
             }
         </tbody>
     </table>
