--- a/GestãoCondomínio/Views/Visitante/Editar.cshtml
+++ b/GestãoCondomínio/Views/Visitante/Editar.cshtml
@@ -10,7 +10,7 @@
 
 <form asp-controller="Visitante" asp-action="Editar">
     <input  type="hidden" asp-for="Id"/>
-    <div class="form-group">
+    <div class="Form-Container">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control">
         @Html.ValidationMessageFor(x => x.Nome)
