--- a/GestãoCondomínio/Views/Acesso/Index.cshtml
+++ b/GestãoCondomínio/Views/Acesso/Index.cshtml
@@ -27,7 +27,7 @@
 
     <h1 class="display-4">Acessos</h1>
 
-    <table class="table" id="table-acesso">
+    <table class="table" id="table-acessos">
         <thead>
             <tr>
                 <th scope="col">Id</th>
