--- a/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
+++ b/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
@@ -32,6 +32,9 @@
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Veiculo" asp-action="">Veículos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Acesso" asp-action="">Acessos</a>
+            </li>
 
         }
 
