Alteração Startup.cs

--- a/GestãoCondomínio/Views/Acesso/Index.cshtml
+++ b/GestãoCondomínio/Views/Acesso/Index.cshtml
@@ -31,11 +31,12 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Nome</th>
-                <th scope="col">RG</th>
-                <th scope="col">Função</th>
-                <th scope="col">Telefone</th>
-                <th scope="col">Descrição</th>
+                <th scope="col">Veículo</th>
+                <th scope="col">Condutor</th>
+                <th scope="col">Documento</th>
+                <th scope="col">Entrada</th>
+                <th scope="col">Saída</th>
+                <th scope="col">Destino</th>
                 <th scope="col"> </th>
             </tr>
         </thead>
