--- a/GestãoCondomínio/Views/Acesso/Editar.cshtml
+++ b/GestãoCondomínio/Views/Acesso/Editar.cshtml
@@ -8,7 +8,7 @@
 
 </div>
 
-<form asp-controller="Funcionario" asp-action="Editar">
+<form asp-controller="Acesso" asp-action="Editar">
     <input  type="hidden" asp-for="Id"/>
     <div class="form-group">
         <label for="veiculo">Veículo</label>
@@ -38,5 +38,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Editar</button>
-    <a class="btn btn-secondary" asp-controller="Funcionario" asp-action="Index" role="button">Voltar</a>
+    <a class="btn btn-secondary" asp-controller="Acesso" asp-action="Index" role="button">Voltar</a>
 </form>
