Criação view Apagar acesso

--- a/GestãoCondomínio/Views/Acesso/Index.cshtml
+++ b/GestãoCondomínio/Views/Acesso/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<AcessoModel>
 @{
-    ViewData["Title"] = "Listagem dos Acessos";
+    ViewData["Title"] = "Acessos";
 }
 <div class="text-center">
     <div class="d-grid  gap-2 d-md-flex justify-content-md-start">
