--- a/GestãoCondomínio/Views/Funcionario/Index.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<FuncionarioModel>
 @{
-    ViewData["Title"] = "Listagem de funcionarios";
+    ViewData["Title"] = "Funcionarios";
 }
 <div class="text-center">
     <div class="d-grid  gap-2 d-md-flex justify-content-md-start">
