--- a/GestãoCondomínio/Views/Prestador/Index.cshtml
+++ b/GestãoCondomínio/Views/Prestador/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<PrestadorModel>
 @{
-    ViewData["Title"] = "Listagem de prestadores";
+    ViewData["Title"] = "Prestadores de serviços";
 }
 <div class="text-center">
     <div class="d-grid  gap-2 d-md-flex justify-content-md-start">
