--- a/GestãoCondomínio/Views/Visitante/Index.cshtml
+++ b/GestãoCondomínio/Views/Visitante/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<VisitanteModel>
 @{
-    ViewData["Title"] = "Listagem de Visitantes";
+    ViewData["Title"] = "Visitantes";
 }
 <div class="text-center">
     <div class="d-grid  gap-2 d-md-flex justify-content-md-start">
