--- a/GestãoCondomínio/Views/Acesso/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Acesso/Cadastrar.cshtml
@@ -46,5 +46,5 @@
     <br />
    
     <button type="submit" class="btn btn-primary">Salvar</button>
-    <a class="btn btn-secondary" asp-controller="Funcionario" asp-action="Index" role="button">Voltar</a>
+    <a class="btn btn-secondary" asp-controller="Acesso" asp-action="Index" role="button">Voltar</a>
 </form>
