--- a/GestãoCondomínio/Views/Morador/Index.cshtml
+++ b/GestãoCondomínio/Views/Morador/Index.cshtml
@@ -25,7 +25,7 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de moradores</h1>
+    <h1 class="display-4">Moradores</h1>
 
     <table class="table" id="table-moradores">
         <thead>
