--- a/GestãoCondomínio/Views/Usuario/Index.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Index.cshtml
@@ -25,7 +25,7 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de Usuários</h1>
+    <h1 class="display-4">Usuários</h1>
 
     <table class="table" id="table-usuarios">
         <thead>
