--- a/GestãoCondomínio/Views/Veiculo/Index.cshtml
+++ b/GestãoCondomínio/Views/Veiculo/Index.cshtml
@@ -25,7 +25,7 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de Veículos</h1>
+    <h1 class="display-4">Veículos</h1>
 
     <table class="table" id="table-veiculos">
         <thead>
