Alteração view Funcionarios

--- a/GestãoCondomínio/Views/Funcionario/Index.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Index.cshtml
@@ -25,7 +25,7 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de Funcionários</h1>
+    <h1 class="display-4">Funcionários</h1>
 
     <table class="table" id="table-funcionario">
         <thead>
