--- a/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
+++ b/GestãoCondomínio/Views/Shared/_LayoutDeslogado.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area=""  asp-action="Index">SGCD</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -27,7 +27,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted " >
+    <footer class="border-top footer text-muted bg-dark" >
         <div class="container text-center">
             &copy; 2022 - Sistema de Gestão para Condomínio
         </div>
